--- a/f1/index.html
+++ b/f1/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="right-col">
-        <aside class="azure">
+        <aside class="azure anim-zmiana-koloru">
           <h1>Panel boczny</h1>
 
           <h2>Ciekawe odsyłacze</h2>
